--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ const STORAGE_KEY = 'bhakti_jap_final_v1';
 // default list (Radha first)
 const DEFAULT = [
   {key:'Radha Radha', display:'राधा राधा', mantra:'राधा राधा', avatar:'र'},
-  {key:'Radha Radha', display:'राधे राधे', mantra:'राधे राधे', avatar:'र'},
+  {key:'Radhe Radhe', display:'राधे राधे', mantra:'राधे राधे', avatar:'र'},
   {key:'Lord Krishna', display:'श्री कृष्ण', mantra:'हरे कृष्ण हरे कृष्ण, कृष्ण कृष्ण हरे हरे', avatar:'क'},
   {key:'Lord Rama', display:'श्री राम', mantra:'ॐ श्री रामाय नमः', avatar:'रा'},
   {key:'Lord Shiva', display:'महादेव', mantra:'ॐ नमः शिवाय', avatar:'श'},
@@ -489,3 +489,4 @@ function stopAllNow(){ stopChant(); stopAmbient(); }
 </script>
 </body>
 </html>
+
